syntax = "proto3";

option java_multiple_files = true;

package com.example.server;

message HelloRequest {
    string name = 1;
    int32 age = 2;
    enum MusicGenres {
        POP = 0;
        ROCK = 1;
        JAZZ = 2;
        METAL = 3;
        OTHER = 4;
    }
    repeated MusicGenres genre = 4;

}

message HelloResponse {
    string greeting = 1;
}

service GreetingService {
    rpc greeting (HelloRequest) returns (HelloResponse);
}